# FoMo-LoRA

./: .gitignore  LICENSE  README.md  dynalora_logs.json  pyproject.toml  requirements.txt  results.csv  testing.ipynb
notebooks/: dynalora_logs.json  experimentation.ipynb  glue_results.tex  memory_plots.ipynb  processing.ipynb  tables.ipynb  vis.ipynb
notebooks/tables/: glue_results_base.tex
other/: notes.txt
scripts/: 1_lw_optim.job  activations.job  array_1_optim_experiments.txt  array_job_cola_experiments.txt  array_job_hyperparameters.txt  array_job_optim_betas_experiments.txt  array_job_optim_experiments.txt  baseline_experiments.job  cola_experiments.job  dina_glue_qv_16.job  dina_glue_qv_16.txt  hyperparam_search.job  hyperparam_search.txt  lw_optim_betas.job  lw_optim_experiments.job  not_cola_qv_smallabl.job  not_cola_qv_smallabl.txt  setup.sh  setup_snellius.job  train.job  visualize_dynalora_logs.py
scripts/baseline_arrays/: array_job_lora_cola_baseline_experiments.txt  array_job_lora_mrpc_baseline_experiments.txt  array_job_lora_qnli_baseline_experiments.txt  array_job_lora_rte_baseline_experiments.txt  array_job_lora_sst2_baseline_experiments.txt  array_job_lora_stsb_baseline_experiments.txt  array_job_vera_cola_baseline_experiments.txt  array_job_vera_mrpc_baseline_experiments.txt  array_job_vera_qnli_baseline_experiments.txt  array_job_vera_rte_baseline_experiments.txt  array_job_vera_sst2_baseline_experiments.txt  array_job_vera_stsb_baseline_experiments.txt
src/: train.py
src/model/: allocator.py  config.py  layer.py  model.py  optimizer.py  (+2 more)
(+5 files in other folders)
