[project]
name = "owolora"
version = "0.0.1"
authors = [
  { name="Matey Krastev", email="matey.krastev@outlook.com" },
]
description = "Adaptive LoRA modulation for NN fine-tuning"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"